--- a/package.json
+++ b/package.json
@@ -290,6 +290,7 @@
     "offline-plugin": "4.8.1",
     "plop": "1.8.0",
     "pre-commit": "1.2.2",
+    "react-edit-inline": "^1.0.8",
     "react-test-renderer": "15.6.1",
     "rimraf": "2.6.1",
     "shelljs": "^0.7.8",
